[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-ip-whitelister-v3"
version = "1.1.0"
description = "IP Whitelister for Pangolin - Self-service IP whitelisting application"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=4.0.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=6.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
